--- a/index.html
+++ b/index.html
@@ -1,15 +1,75 @@
-<html>
-  <body>
-    <h1>Sumador</h1>
-    <form id="sumar-form">
-      <label for="primer-numero">Primer número:</label>
-      <input type="number" id="primer-numero" />
-      <label for="segundo-numero">Segundo número:</label>
-      <input type="number" id="segundo-numero" />
-      <input type="submit" value="Sumar" id="sumar-button" />
-    </form>
-    <div id="resultado-div"></div>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Calculadora de Precio Total</title>
+</head>
+<body>
+  <h1>Calculadora de Precio Total</h1>
+  <form id="calculatorForm">
+    <div>
+    <label for="quantity">Cantidad del Item:</label>
+    <input type="number" id="quantity" min="0" required>
+    </div>
 
-    <script type="module" src="./src/presenter.js"></script>
-  </body>
+    <div>
+    <label for="unitPrice">Precio Unitario:</label>
+    <input type="number" id="unitPrice" min="0" required>
+    </div>
+
+    <div>
+    <label for="stateCode">Código de Estado:</label>
+    <select id="stateCode" required>
+      <option value="California">CA</option>
+      <option value="Utah">UT</option>
+      <option value="Nevada">NV</option>
+      <option value="Texas">TX</option>
+      <option value="Alabama">AL</option>
+    </select>
+    </div>
+
+    <div>
+    <label for="productType">Tipo de Producto:</label>
+    <select id="productType">
+      <option value="Varios">Varios</option>
+      <option value="Bebidas alcohólicas">Bebidas alcohólicas</option>
+      <option value="Material de escritorio">Material de escritorio</option>
+      <option value="Muebles">Muebles</option>
+      <option value="Electrónicos">Electrónicos</option>
+      <option value="Vestimenta">Vestimenta</option>
+    </select>
+    </div>
+
+    <div>
+    <label for="volumetricWeight">Peso Volumétrico:</label>
+    <input type="number" id="volumetricWeight" min="0" required>
+    </div>
+
+    <div>
+    <label for="netPrice">Precio Neto:</label>
+    <input type="text" id="netPrice" readonly>
+    </div>
+
+    <div>
+    <label for="discount">Descuento:</label>
+    <input type="text" id="discount" readonly>
+    </div>
+
+    <div>
+    <label for="tax">Impuesto:</label>
+    <input type="text" id="tax" readonly>
+    </div>
+
+    <div>
+    <label for="totalPrice">Precio Total:</label>
+    <input type="text" id="totalPrice" readonly>
+    </div>
+
+    <div>
+    <button type="button" onclick="calculateTotal()">Calcular Precio Total</button>
+    </div>
+  </form>
+
+</body>
 </html>
