Added the customer type in the html

--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@
     </div>
 
     <div>
+      <label for="customerType">Tipo de Cliente:</label>
+      <select id="customerType">
+        <option value="Normal">Normal</option>
+        <option value="Recurrente">Recurrente</option>
+        <option value="Antiguo recurrente">Antiguo recurrente</option>
+        <option value="Especial">Especial</option>
+      </select>
+    </div>
+
+    <div>
     <label for="netPrice">Precio Neto:</label>
     <input type="text" id="netPrice" readonly>
     </div>
