--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculadora de Precio Total</title>
+  <style>
+    .hidden {
+      display: none;
+    }
+  </style>
 </head>
 <body>
   <h1>Calculadora de Precio Total</h1>
@@ -58,22 +63,50 @@
 
     <div>
     <label for="netPrice">Precio Neto:</label>
-    <input type="text" id="netPrice" readonly>
+    <input type="text" id="netPriceDetail" class="hidden" readonly>
+    <input type="text" id="netPrice" class="hidden" readonly>
     </div>
 
     <div>
     <label for="discount">Descuento:</label>
-    <input type="text" id="discount" readonly>
+    <input type="text" id="discountDetail" class="hidden" readonly>
+    <input type="text" id="discount" class="hidden" readonly>
     </div>
 
     <div>
     <label for="tax">Impuesto:</label>
-    <input type="text" id="tax" readonly>
+    <input type="text" id="taxDetail" class="hidden" readonly>
+    <input type="text" id="tax" class="hidden" readonly>
+    </div>
+
+    <div>
+    <label for="productDiscount">Descuento por categoria de producto:</label>
+    <input type="text" id="productDiscountDetail" class="hidden" readonly>
+    <input type="text" id="productDiscount" class="hidden" readonly>
+    </div>
+
+    <div>
+    <label for="productTax">Impuesto por categoria de producto:</label>
+    <input type="text" id="productTaxDetail" class="hidden" readonly>
+    <input type="text" id="productTax" class="hidden" readonly>
+    </div>
+
+    <div>
+    <label for="shippingCost">Costo de envío:</label>
+    <input type="text" id="shippingCostDetail" class="hidden" readonly>
+    <input type="text" id="shippingCost" class="hidden" readonly>
+    </div>
+
+    <div>
+    <label for="specialDiscount">Descuento especial de cliente:</label>
+    <input type="text" id="specialDiscountDetail" class="hidden" readonly>
+    <input type="text" id="specialDiscount" class="hidden" readonly>
     </div>
 
     <div>
     <label for="totalPrice">Precio Total:</label>
-    <input type="text" id="totalPrice" readonly>
+    <input type="text" id="totalPriceDetail" class="hidden" readonly>
+    <input type="text" id="totalPrice" class="hidden" readonly>
     </div>
 
     <div>
