Determines the tax percentage based on the state

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <div>
     <label for="stateCode">Código de Estado:</label>
     <select id="stateCode" required>
-      <option value="California">CA</option>
-      <option value="Utah">UT</option>
-      <option value="Nevada">NV</option>
-      <option value="Texas">TX</option>
-      <option value="Alabama">AL</option>
+      <option value="CA">CA</option>
+      <option value="UT">UT</option>
+      <option value="NV">NV</option>
+      <option value="TX">TX</option>
+      <option value="AL">AL</option>
     </select>
     </div>
 
