Determines the additional tax percentage based on the product type

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <label for="productType">Tipo de Producto:</label>
     <select id="productType">
       <option value="Varios">Varios</option>
+      <option value="Alimentos">Alimentos</option>
       <option value="Bebidas alcohólicas">Bebidas alcohólicas</option>
       <option value="Material de escritorio">Material de escritorio</option>
       <option value="Muebles">Muebles</option>
