Calculates the amount to discount on shipping based on the client type

--- a/index.html
+++ b/index.html
@@ -94,8 +94,13 @@
 
     <div>
     <label for="shippingCost">Costo de envío:</label>
-    <input type="text" id="shippingCostDetail" class="hidden" readonly>
     <input type="text" id="shippingCost" class="hidden" readonly>
+    </div>
+
+    <div>
+    <label for="shippingCostDiscount">Descuento especial a costo de envío:</label>
+    <input type="text" id="shippingCostDiscountDetail" class="hidden" readonly>
+    <input type="text" id="shippingCostDiscount" class="hidden" readonly>
     </div>
 
     <div>
