--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculadora de Precio Total</title>
-  <style>
-    .hidden {
-      display: none;
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="./styles/styles.css">
 </head>
 <body>
   <h1>Calculadora de Precio Total</h1>
